# rickroll

./: README.md
fixtures/images/: 01_80x80.json  02_80x80.json  03_80x80.json  04_80x80.json  05_80x80.json
s3-fanout-nodejs/: .gitignore  Notes.md  README.md  cdk.json  docker-compose.yml  package.json  tsconfig.json
s3-fanout-nodejs/lambda/fanout/: package.json
s3-fanout-nodejs/lambda/fanout/src/: main.ts
s3-fanout-nodejs/sh/: invoke-fanout  invoke-fanout.ts  tail-fanout.ts  upload-image.ts  upload-images.ts
s3-fanout-nodejs/sh/deploy/: attach-s3-trigger.ts
s3-fanout-nodejs/src/: cdk-stack-output.ts  cdk-stack.ts  utils.ts
s3-post-metadata/: package.json
s3-post-metadata-rust/: .gitignore  README.md  docker-compose.yml  package.json
s3-post-metadata-rust/lambda/.cargo/: config.toml
s3-post-metadata-rust/lambda/upload/: Cargo.toml  Dockerfile  build-in-container.docker  chef.docker  rustfmt.toml
s3-post-metadata-rust/lambda/upload/src/: main.rs
s3-post-metadata-rust/sh/: tail-upload  tail-upload-aws.ts  tail-upload.ts
s3-post-metadata-rust/sh/deploy/: attach-s3-trigger.ts
s3-post-metadata-rust/src/: cdk-stack.ts  utils.ts
s3-post-metadata/lambda/upload/: package.json  tsconfig.json
s3-post-metadata/lambda/upload/src/: main.ts
s3-post-metadata/sh/: aws-log-groups  bucket-list-recursive.ts  upload-images.ts
s3-post-metadata/sh/deploy/: attach-s3-trigger.ts
s3-post-metadata/src/: cdk-stack-output.ts  cdk-stack.ts  utils.ts
s3-unzip-fanout-nodejs/: README.md  package.json
s3-unzip-fanout-nodejs/src/: cdk-stack.ts
