[package]
name = "upload"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
serde = "1.0.126"
tokio = "1.6.1"

lambda_runtime = "0.3.0"
aws_lambda_events = "^0.6.3"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }

# Remove timestamp features which causes lambda function to panic when running in AWS (localstack) containerized
[dependencies.simple_logger]
version = "1.11.0"
default-features = false
features = ["colors"]
